<resources>
    <string name="app_name">Details</string>
    <string name="add_personal_details">Add personal details</string>
    <string name="profile_image">Profile Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="preferences_file_name">Detail Preferences</string>
    <string name="view_personal_details">View personal details</string>
    <string name="reset">Reset</string>
</resources>