<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/add_personal_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:contentDescription="@string/profile_image"
        android:layout_below="@id/display_text"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_below="@id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_age"
            android:maxLength="3"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_below="@id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        android:textAllCaps="false"/>

</RelativeLayout>